--- a/data/settings.json
+++ b/data/settings.json
@@ -1,1 +1,1 @@
-{"token":"process.env.token","client":"547867373974192156","tag":"","case":"true","separator":"\\s+","ownerId":"305284636920119306"}
+{"token":"NTQ3ODY3MzczOTc0MTkyMTU2.D09A5A.2q8QkG5-ueCvhIR8OAZ72LlHq1U","client":"547867373974192156","tag":"","case":"true","separator":"\\s+","ownerId":"305284636920119306"}
