--- a/data/settings.json
+++ b/data/settings.json
@@ -1,1 +1,1 @@
-{"token":"process.env.token","client":"547867373974192156","tag":"","case":"true","separator":"\\s+","ownerId":"305284636920119306"}
+{"client":"547867373974192156","tag":"","case":"true","separator":"\\s+","ownerId":"305284636920119306"}
